# template-gLib-cmake

./: CMakeLists.txt  README.MD  main.cpp  update.sh
gLib/: BasicGeometry.cpp  BasicGeometry.h  Others.cpp  Others.h
glib/: BasicGeometry.cpp  BasicGeometry.h  CMakeLists.txt  Color.cpp  Color.h  FileExtend.cpp  FileExtend.h  PCLExtend.cpp  PCLExtend.h  Statistics.cpp  Statistics.h  StringExtend.cpp  StringExtend.h  V2I.hpp  V3.hpp  VectorExtend.cpp  VectorExtend.h
